// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-field-editor Renders \`text-field-editor\` with all parameters 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Text field editor title
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                field-label
              </label>
              <input
                name="field-name"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`text-field-editor Renders \`text-field-editor\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span />
    </div>
    <div
      class="text"
    >
      <div
        class="v-input theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label theme--light"
                style="left: 0px; position: absolute;"
              >
                Text
              </label>
              <input
                name="text"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;
